--- a/index.html
+++ b/index.html
@@ -11,11 +11,73 @@
     <div class="page-wrapper">
         <nav id="navbar">
             <header class="navigation-header">JS Documentation</header>
+            <div class="nav-content first-section">
+                <a href="#introduction" class="nav-link">Introduction</a>
+            </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">Introduction</a>
+                <a href="#what_you_should_already_know" class="nav-link">What you should already know</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">Javascript and Java</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">Hello world</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">Variables</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">Declaring Variables</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">Variable Scope</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">Global Variables</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">Constants</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">Data Types</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">If...else statements</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">While statement</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">Function declarations</a>
+            </div>
+            <div class="nav-content">
+                <a href="#" class="nav-link">Reference</a>
             </div>
         </nav>
-        <main id="main-doc"></main>
+        <main id="main-doc">
+            <section class="main-section first-section-main" id="introduction">
+                <header class="section-header">Introduction</header>
+                <div class="section-content">
+                    <p class="section-paragraph">JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
+                    <p class="section-paragraph">JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects; for example:</p>
+                    <ul>
+                        <li class="section-list">Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user events such as mouse clicks, form input, and page navigation.</li>
+                        <li class="section-list">Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.</li>
+                    </ul>
+                </div>
+            </section>
+            <section class="main-section" id="what_you_should_already_know">
+                <header class="section-header">What you should already know</header>
+                <div class="section-content">
+                    <p class="section-paragraph">This guide assumes you have the following basic background:</p>
+                    <ul>
+                        <li class="section-list">A general understanding of the Internet and the World Wide Web (WWW).</li>
+                        <li class="section-list">Good working knowledge of HyperText Markup Language (HTML).</li>
+                        <li class="section-list">Some programming experience. If you are new to programming, try one of the tutorials linked on the main page about JavaScript.</li>
+                    </ul>
+                </div>
+            </section>
+        </main>
     </div>
 </body>
 </html>
