--- a/index.html
+++ b/index.html
@@ -21,37 +21,37 @@
                 <a href="#javascript_and_java" class="nav-link">JavaScript and Java</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">Hello world</a>
+                <a href="#hello_world" class="nav-link">Hello world</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">Variables</a>
+                <a href="#variables" class="nav-link">Variables</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">Declaring Variables</a>
+                <a href="#declaring_variables" class="nav-link">Declaring Variables</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">Variable Scope</a>
+                <a href="#variable_scope" class="nav-link">Variable Scope</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">Global Variables</a>
+                <a href="#global_variables" class="nav-link">Global Variables</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">Constants</a>
+                <a href="#constants" class="nav-link">Constants</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">Data Types</a>
+                <a href="#data_types" class="nav-link">Data Types</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">If...else statements</a>
+                <a href="#if_else_statements" class="nav-link">If...else statements</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">While statement</a>
+                <a href="#while_statement" class="nav-link">While statement</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">Function declarations</a>
+                <a href="#function_declarations" class="nav-link">Function declarations</a>
             </div>
             <div class="nav-content">
-                <a href="#" class="nav-link">Reference</a>
+                <a href="#reference" class="nav-link">Reference</a>
             </div>
         </nav>
         <main id="main-doc">
@@ -203,7 +203,7 @@ MY_OBJECT.key = "otherValue"</code>
                     <p class="section-paragraph no-top-margin">Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform.</p>
                 </div>
             </section>
-            <section class="main-section" id="if_else_statement">
+            <section class="main-section" id="if_else_statements">
                 <header class="section-header">if...else statement</header>
                 <div class="section-content">
                     <p class="section-paragraph">Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:</p>
@@ -281,7 +281,7 @@ while (n < 3) {
                     <p class="section-paragraph">After completing the third pass, the condition n < 3 is no longer true, so the loop terminates.</p>
                 </div>
             </section>
-            <section class="main-section" id="Function_declarations">
+            <section class="main-section" id="function_declarations">
                 <header class="section-header">Function declarations</header>
                 <div class="section-content">
                     <p class="section-paragraph">A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:</p>
@@ -303,8 +303,8 @@ while (n < 3) {
                     <p class="section-paragraph">Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function.</p>
                 </div>
             </section>
-            <section class="main-section" id="global_variables">
-                <header class="section-header">Global Variables</header>
+            <section class="main-section" id="reference">
+                <header class="section-header">Reference</header>
                 <div class="section-content">
                     <ul>
                         <li class="section-list">All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">MDN</a></li>
