--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav id="navbar">
             <header class="navigation-header"><a href="index.html">JS Documentation</a></header>
             <div class="nav-content first-section">
-                <a href="#introduction" class="nav-link">Introduction</a>
+                <a href="#" class="nav-link">Introduction</a>
             </div>
             <div class="nav-content">
                 <a href="#what_you_should_already_know" class="nav-link">What you should already know</a>
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="main-section" id="what_you_should_already_know">
+            <section class="main-section anchor" id="what_you_should_already_know">
                 <header class="section-header">What you should already know</header>
                 <div class="section-content">
                     <p class="section-paragraph">This guide assumes you have the following basic background:</p>
@@ -77,7 +77,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="main-section" id="javascript_and_java">
+            <section class="main-section anchor" id="javascript_and_java">
                 <header class="section-header">JavaScript and Java</header>
                 <div class="section-content">
                     <p class="section-paragraph">JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
@@ -85,7 +85,7 @@
                     <p class="section-paragraph">JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
                 </div>
             </section>
-            <section class="main-section" id="hello_world">
+            <section class="main-section anchor" id="hello_world">
                 <header class="section-header">Hello World</header>
                 <div class="section-content">
                     <p class="section-paragraph">To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code</p>
@@ -98,7 +98,7 @@ greetMe("World");</code>
                     <p class="section-paragraph">Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!</p>
                 </div>
             </section>
-            <section class="main-section" id="variables">
+            <section class="main-section anchor" id="variables">
                 <header class="section-header">Variables</header>
                 <div class="section-content">
                     <p class="section-paragraph">You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.</p>
@@ -106,7 +106,7 @@ greetMe("World");</code>
                     <p class="section-paragraph">You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.</p>
                 </div>
             </section>
-            <section class="main-section" id="declaring_variables">
+            <section class="main-section anchor" id="declaring_variables">
                 <header class="section-header">Declaring Variables</header>
                 <div class="section-content">
                     <p class="section-paragraph">You can declare a variable in three ways:</p>
@@ -129,7 +129,7 @@ greetMe("World");</code>
                     </ul>
                 </div>
             </section>
-            <section class="main-section" id="variable_scope">
+            <section class="main-section anchor" id="variable_scope">
                 <header class="section-header">Variable scope</header>
                 <div class="section-content">
                     <p class="section-paragraph">When you declare a variable outside of any function, it is called a global variable, because it is available to any other code in the current document. When you declare a variable within a function, it is called a local variable, because it is available only within that function.</p>
@@ -149,14 +149,14 @@ console.log(y);
 // ReferenceError: y is not defined</code>
                 </div>
             </section>
-            <section class="main-section" id="global_variables">
+            <section class="main-section anchor" id="global_variables">
                 <header class="section-header">Global Variables</header>
                 <div class="section-content">
                     <p class="section-paragraph">Global variables are in fact properties of the global object. In web pages the global object is window, so you can set and access global variables using the window.variable syntax.</p>
                     <p class="section-paragraph">Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a document, you can refer to this variable from an iframe as parent.phoneNumber.</p>
                 </div>
             </section>
-            <section class="main-section" id="constants">
+            <section class="main-section anchor" id="constants">
                 <header class="section-header">Constants</header>
                 <div class="section-content">
                     <p class="section-paragraph">You can create a read-only, named constant with the const keyword. The syntax of a constant identifier is the same as for a variable identifier: it must start with a letter, underscore or dollar sign and can contain alphabetic, numeric, or underscore characters.</p>
@@ -184,7 +184,7 @@ MY_OBJECT.key = "otherValue"</code>
                     </div>
                 </div>
             </section>
-            <section class="main-section" id="data_types">
+            <section class="main-section anchor" id="data_types">
                 <header class="section-header">Data types</header>
                 <div class="section-content">
                     <p class="section-paragraph">The latest ECMAScript standard defines seven data types:</p>
@@ -203,7 +203,7 @@ MY_OBJECT.key = "otherValue"</code>
                     <p class="section-paragraph no-top-margin">Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform.</p>
                 </div>
             </section>
-            <section class="main-section" id="if_else_statements">
+            <section class="main-section anchor" id="if_else_statements">
                 <header class="section-header">if...else statement</header>
                 <div class="section-content">
                     <p class="section-paragraph">Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:</p>
@@ -251,7 +251,7 @@ MY_OBJECT.key = "otherValue"</code>
                     </div>
                 </div>
             </section>
-            <section class="main-section" id="while_statement">
+            <section class="main-section anchor" id="while_statement">
                 <header class="section-header">while statement</header>
                 <div class="section-content">
                     <p class="section-paragraph">A while statement executes its statements as long as a specified condition evaluates to true. A while statement looks as follows:</p>
@@ -281,7 +281,7 @@ while (n < 3) {
                     <p class="section-paragraph">After completing the third pass, the condition n < 3 is no longer true, so the loop terminates.</p>
                 </div>
             </section>
-            <section class="main-section" id="function_declarations">
+            <section class="main-section anchor" id="function_declarations">
                 <header class="section-header">Function declarations</header>
                 <div class="section-content">
                     <p class="section-paragraph">A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:</p>
@@ -303,7 +303,7 @@ while (n < 3) {
                     <p class="section-paragraph">Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function.</p>
                 </div>
             </section>
-            <section class="main-section" id="reference">
+            <section class="main-section anchor" id="reference">
                 <header class="section-header">Reference</header>
                 <div class="section-content">
                     <ul>
