--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#data_types" class="nav-link">Data Types</a>
             </div>
             <div class="nav-content">
-                <a href="#if_else_statements" class="nav-link">If...else statements</a>
+                <a href="#if...else_statements" class="nav-link">If...else statements</a>
             </div>
             <div class="nav-content">
                 <a href="#while_statement" class="nav-link">While statement</a>
@@ -203,8 +203,8 @@ MY_OBJECT.key = "otherValue"</code>
                     <p class="section-paragraph no-top-margin">Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform.</p>
                 </div>
             </section>
-            <section class="main-section anchor" id="if_else_statements">
-                <header class="section-header">if...else statement</header>
+            <section class="main-section anchor" id="if...else_statements">
+                <header class="section-header">if...else statements</header>
                 <div class="section-content">
                     <p class="section-paragraph">Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:</p>
                     <div class="code-wrapper">
